# aiterm

./: .gitignore  README.md  at  build_bloom_filter.py  find_python_files.py  flake.nix  pyproject.toml  setup.py
src/: at
src/aiterm/: bloom_filter.py  config.py  context_gather.py  default_config.py  executor.py  ignore_commands.txt  ignore_commands_bloom.pkl  main.py  main_new.py  prompt_builder.py  tui.py
src/aiterm/llm/: __init__.py  anthropic.py  base.py  factory.py  ollama.py  openai.py  test.py
tests/: README.md  test_adapters.py  test_conversation_flow.py  test_new_config.py  test_new_system.py  test_non_interactive.py  test_simple.py  test_structured_prompt.py  test_with_uv.py  test_with_uv_config.py
